--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
+
 <head>
   <title>Imageviewer</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => false %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
 <script src="https://openseadragon.github.io/openseadragon/openseadragon.min.js"></script>
+</head>
 <body>
   <%= csrf_meta_tags %>
 </head>
@@ -13,4 +13,3 @@
 <%= yield %>
 
 </body>
-</html>
