--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 
-<h2>Hello there, welcome to ImageViewer!</h2>
+<h2>Hello there, welcome to ImageViewer!!</h2>
 <br/><br/>
 
 <div id="example-wide-dzi" class="openseadragon">
