--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,23 +12,23 @@
  *
  */
 
-@import "bootstrap-sprockets";
 @import "bootstrap";
 
 body {
-  padding-top: 50px;
+  padding-top: 5rem;
 }
-.content{
-  padding: 40px 15px;
-  text-align: center;
+
+@media (min-width: 1200px){
+	.container {
+	    width: 100%;
+	}
 }
 
 .image-table{
 	background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding:10px;
-  -webkit-box-shadow: none;
-  box-shadow: none;
- 
+  	border: 1px solid #ddd;
+  	border-radius: 4px;
+  	padding:10px;
+  	-webkit-box-shadow: none;
+  	box-shadow: none;
 }
