--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -8,13 +8,13 @@
 </div>
 <div onclick="viewer.annotations.clean()" class="btn btn-success">Clear Annotation</div>
 
-<div class="container">
-	<div class="col-md-6 col-xs-12">
+<div class="row">
+	<div class="col-md-8 col-12">
 		<div id="<%=@image.upload_file_name.parameterize%>" class="openseadragon">
 		</div>
 	</div>
 
-	<div class="col-md-6 col-xs-12">
+	<div class="col-md-4 col-12">
 		<table class="table table-hover">
 		  <thead>
 		  	<tr>
