--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,3 +33,21 @@ body {
   box-shadow: none;
  
 }
+
+.filelists { margin: 20px 0; }
+.filelists h5 { margin: 10px 0 0; }
+.filelists .cancel_all { color: red; cursor: pointer; clear: both; font-size: 10px; margin: 0; text-transform: uppercase; }
+.filelist { margin: 0; padding: 10px 0; }
+.filelist li { background: #fff; border-bottom: 1px solid #ECEFF1; font-size: 14px; list-style: none; padding: 5px; position: relative; }
+.filelist li:before { display: none !important; } /* main site demos */
+.filelist li .bar { background: #eceff1; content: ''; height: 100%; left: 0; position: absolute; top: 0; width: 0; z-index: 0;
+	-webkit-transition: width 0.1s linear;
+			transition: width 0.1s linear;
+}
+.filelist li .content { display: block; overflow: hidden; position: relative; z-index: 1; }
+.filelist li .file { color: #455A64; float: left; display: block; overflow: hidden; text-overflow: ellipsis; max-width: 50%; white-space: nowrap; }
+.filelist li .progress { color: #B0BEC5; display: block; float: right; font-size: 10px; text-transform: uppercase; }
+.filelist li .cancel { color: red; cursor: pointer; display: block; float: right; font-size: 10px; margin: 0 0 0 10px; text-transform: uppercase; }
+.filelist li.error .file { color: red; }
+.filelist li.error .progress { color: black; }
+.filelist li.error .cancel { display: none; }
