--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,23 +1,3 @@
-<style>
-	.filelists { margin: 20px 0; }
-	.filelists h5 { margin: 10px 0 0; }
-	.filelists .cancel_all { color: red; cursor: pointer; clear: both; font-size: 10px; margin: 0; text-transform: uppercase; }
-	.filelist { margin: 0; padding: 10px 0; }
-	.filelist li { background: #fff; border-bottom: 1px solid #ECEFF1; font-size: 14px; list-style: none; padding: 5px; position: relative; }
-	.filelist li:before { display: none !important; } /* main site demos */
-	.filelist li .bar { background: #eceff1; content: ''; height: 100%; left: 0; position: absolute; top: 0; width: 0; z-index: 0;
-		-webkit-transition: width 0.1s linear;
-				transition: width 0.1s linear;
-	}
-	.filelist li .content { display: block; overflow: hidden; position: relative; z-index: 1; }
-	.filelist li .file { color: #455A64; float: left; display: block; overflow: hidden; text-overflow: ellipsis; max-width: 50%; white-space: nowrap; }
-	.filelist li .progress { color: #B0BEC5; display: block; float: right; font-size: 10px; text-transform: uppercase; }
-	.filelist li .cancel { color: red; cursor: pointer; display: block; float: right; font-size: 10px; margin: 0 0 0 10px; text-transform: uppercase; }
-	.filelist li.error .file { color: red; }
-	.filelist li.error .progress { color: black; }
-	.filelist li.error .cancel { display: none; }
-</style>
-
 <script>
 	$(document).ready(function() {
 		$(".upload").upload({
@@ -101,7 +81,6 @@
 		}
 	}
 	function onFileError(e, file, error) {
-		console.log("File Error");
 		$(this).parents("form").find(".filelist.queue")
 			.find("li[data-index=" + file.index + "]").addClass("error")
 			.find(".progress").text("Upload Cancled");
@@ -121,19 +100,17 @@
 	}
 </script>
 
-<div class="demo_container">
-	<div class="demo_example">
-		<form action="#" method="GET" class="form demo_form">
-			<div class="upload" data-upload-options='{"action":"/images"}'></div>
-			<div class="filelists">
-				<h5>Complete</h5>
-				<ol class="filelist complete">
-				</ol>
-				<h5>Queued</h5>
-				<ol class="filelist queue">
-				</ol>
-				<span class="cancel_all">Cancel All</span>
-			</div>
-		</form>
-	</div>
-	</div>
+<div class="container">
+	<form action="#" method="GET" class="form image_form">
+		<div class="upload" data-upload-options='{"action":"/images"}'></div>
+		<div class="filelists">
+			<h5>Complete</h5>
+			<ol class="filelist complete">
+			</ol>
+			<h5>Queued</h5>
+			<ol class="filelist queue">
+			</ol>
+			<span class="cancel_all">Cancel All</span>
+		</div>
+	</form>
+</div>
