--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,10 @@
 
-<h2>Hello there, welcome to ImageViewer!!</h2>
+<div style="padding-top:50px;" class="container">
+<h2>Hello there, welcome to ImageViewer!</h2>
 <br/><br/>
 
 <div id="example-wide-dzi" class="openseadragon">
+</div>
 </div>
 
 <script>
