--- a/app/views/images/_drawer_data.html.erb
+++ b/app/views/images/_drawer_data.html.erb
@@ -7,26 +7,40 @@
 	<span style="white-space:pre-wrap;" class="navbar-brand">Clinical Data</span>
 </header>
 <ul class="list-group">
-	<!-- Clinical Data Table -->
 	<div>
-		<div class="col-md-12 col-12">
-			<table class="table table-hover">
-			  <thead>
-			  	<tr>
-			  		<td>Data Key</td>
-			  		<td>Value</td>
-			  	</tr>
-			  </thead>
-			  <tbody>
-		  			<%@clinical.each do |key| %>
-		  			<tr class="clinical_data-link">
-		  				<td><%=key.meta_key%></td>
-		  				<td><%=key.meta_value%></td>
-		  			</tr>
-		  			<% end %>
-		  		</tbody>
-			</table>
+		<div style="float:right;" class="btn-group">
+		   	<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Quick Add</button>
+		   	<div class="dropdown-menu">
+		   		<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="patient-id" data-label="Patient ID">Patient ID</a>
+				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="age" data-label="Age (years)">Age</a>
+				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="disease_type" data-label="Disease Type">Disease Type</a>
+				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="dob" data-label="Date of Birth">Date of Birth</a>
+				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="gender" data-label="Gender">Gender</a>
+				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="height" data-label="Height (ft)">Height</a>
+				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="weight" data-label="Weight (lb)">Weight</a>
+				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="primary_site" data-label="Primary Site">Primary Site</a>
+				<div class="dropdown-divider"></div>
+				<a class="dropdown-item" href="#">Other</a>
+		   	</div>
 		</div>
+	</div>
+	<div>
+		<table style="font-size:12px;" class="table table-hover">
+		  <thead>
+		  	<tr>
+		  		<th>Data Key</th>
+		  		<th>Value</th>
+		  	</tr>
+		  </thead>
+		  <tbody>
+	  			<%@clinical.each do |key| %>
+	  			<tr class="clinical_data-link">
+	  				<td><%=key.meta_key%></td>
+	  				<td><%=key.meta_value%></td>
+	  			</tr>
+	  			<% end %>
+	  		</tbody>
+		</table>
 	</div>
 	<header>
 		<span style="white-space:pre-wrap;" class="navbar-brand">Import Data</span>
@@ -38,26 +52,6 @@
 			<%= f.hidden_field :image_id, :value=> image.id %>
 	  	<%= f.submit 'Upload', :style=>'float:right', :class=>"btn btn-success"%>
 		<% end %>
-	</div>
-
-	<!-- quick add -->
-	<div>
-		<div class="btn-group">
-		   	<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Quick Add</button>
-		   	<div class="dropdown-menu">
-		   		<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="patient-id" data-label="Patient ID">Patient ID</a>
-		   		<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="allergies" data-label="Allergies (text)">Allergies</a>
-				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="age" data-label="Age (years)">Age</a>
-				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="disease_type" data-label="Disease Type">Disease Type</a>
-				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="dob" data-label="Date of Birth">Date of Birth</a>
-				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="gender" data-label="Gender">Gender</a>
-				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="height" data-label="Height (ft)">Height</a>
-				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="weight" data-label="Weight (lb)">Weight</a>
-				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="symptoms" data-label="Symptoms">Symptoms</a>
-				<div class="dropdown-divider"></div>
-				<a class="dropdown-item" href="#">Other</a>
-		   	</div>
-		</div>
 	</div>
 
 	<script type="text/javascript">
