--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -101,6 +101,10 @@
 </script>
 
 <div class="container">
+	<br/><br/>
+	<h1>Upload Image</h1>
+	<h4>Only SVS file formats supported at this time</h4>
+	<br/><br/>
 	<form action="#" method="GET" class="form image_form">
 		<div class="upload" data-upload-options='{"action":"/images"}'></div>
 		<div class="filelists">
