--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,14 +18,17 @@
 
 
 <body>
-  <div class="navbar navbar-inverse bg-inverse">
+  <div id="top-nav" class="navbar navbar-inverse bg-inverse">
     <button class="navbar-toggler" type="button" data-toggle="drawer" data-target="#dw-1" aria-expanded="false">
       <span class="sr-only">Toggle drawer</span>
       <i class="material-icons">menu</i>
     </button>
     <ul class="nav navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link active" href="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About<a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Image Archive</a>
