--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -14,14 +14,16 @@
 		  	<th>ID</th>
 		  	<th>Image Name</th>
 		  	<th>Date Uploaded</th>
+		  	<th>Status</th>
 	  	</tr>
 	  </thead>
 	  <tbody>
 	  	<% @images.each do |image| %>
-	  		<tr class="image-link" data-link="<%=image_path(image)%>">
+	  		<tr class="image-link" data-link="<% if !image.path.blank?%><%=image_path(image)%><% end %>">
 	  			<td><%=image.id%></td>
 	  			<td><%=image.title%></td>
 	  			<td><%=image.created_at%></td>
+	  			<td><% if image.processing %>Processing<% elsif !image.path.blank?%>Available<%else%>Awaiting Processing<% end%></td>
 	  		</tr>
 	  	<% end %>
 	  </tbody>
